text and units in CSS

--- a/text.html
+++ b/text.html
@@ -1,5 +1,5 @@
 <!-- text-align -->
- 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,6 +25,39 @@
 </head>
 <body>
     <h2>This is second heading</h2>
-    <p>this is a simple and a normal paragraph.</p>
+    <p id="myid1">this is a simple and a normal paragraph.</p>
 </body>
+</html>
+
+
+<!-- font weight -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>text property</title>
+    <link rel="stylesheet" href="text.css">
+</head>
+<body>
+    <h3 id="id1">heading 1</h3>
+    <h3 id="id2">heading 2</h3>
+    <h3 id="id3">heading 3</h3>
+    <h3 id="id4">heading 4</h3>
+</body>
+</html>
+
+<!-- font-family -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>text property</title>
+    <link rel="stylesheet" href="text.css">
+</head>
+<body>
+    <p id="myid2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+    Delectus earum fuga accusamus eligendi similique soluta. </p>
 </html>
