--- a/box_model.html
+++ b/box_model.html
@@ -21,4 +21,21 @@
 </html>
 </head>
 
-
+<!-- concept of border radius -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BOX MODEL IN CSS</title>
+    <link rel="stylesheet" href="box_model.css">
+</head>
+<body>
+    <br>
+    <div id="radius">
+        hello i am a circle.
+    </div>
+    <div id="length">hii i am a square.</div>
+</body>
+</html>
+</head>
