background image in css

--- a/bg_image.html
+++ b/bg_image.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="bg_image.css">
 </head>
 <body>
-    <div> hii👋🏻</div>
+    <div id="box1"> hii👋🏻</div>
 </body>
 </html>
